# regex-compat

./: .gitignore  ChangeLog.md  Makefile  package.conf.in  regex-compat.cabal
.github/workflows/: haskell-ci.yml
Text/: Regex.hs
