cabal-version:          1.12
name:                   regex-compat
version:                0.95.1.1

build-type:		Simple
license:                BSD3
license-file:           LICENSE
copyright:              Copyright (c) 2006, Christopher Kuklewicz
author:                 Christopher Kuklewicz
maintainer:             hvr@gnu.org
synopsis:               Replaces/Enhances Text.Regex
category:               Text
description:
  One module layer over <//hackage.haskell.org/package/regex-posix regex-posix> to replace "Text.Regex"

library
  exposed-modules: Text.Regex

  build-depends: base        >= 4.3 && < 4.14
               , regex-base  >= 0.93 && < 0.95
               , regex-posix >= 0.95.1 && < 0.97
               , array       >= 0.3 && < 0.6

  default-language: Haskell2010
  default-extensions: MultiParamTypeClasses, FunctionalDependencies

  ghc-options:            -Wall -O2
